# gr-beacon

./: .gitignore  CMakeLists.txt  MANIFEST.md
.conda/: README.md
.conda/recipe/: meta.yaml
.github/workflows/: test.yml
apps/: CMakeLists.txt  beacon-rx.grc
cmake/Modules/: beaconConfig.cmake  gnuradio-beaconConfig.cmake
docs/: CMakeLists.txt  README.beacon
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: beacon-rx-gui.grc
grc/: CMakeLists.txt  beacon_beacon_sink_c.block.yml  beacon_beacon_sink_c.xml
include/beacon/: CMakeLists.txt  api.h  beacon_sink_c.h
include/gnuradio/beacon/: CMakeLists.txt  api.h  beacon_sink_c.h
lib/: CMakeLists.txt  beacon_sink_c_impl.cc  beacon_sink_c_impl.h  qa_beacon.cc  qa_beacon.h  test_beacon.cc
python/: CMakeLists.txt  __init__.py  qa_beacon_sink_c.py
python/beacon/: CMakeLists.txt  __init__.py  qa_beacon_sink_c.py
python/beacon/bindings/: CMakeLists.txt  beacon_sink_c_python.cc  python_bindings.cc
python/beacon/bindings/docstrings/: beacon_sink_c_pydoc_template.h
swig/: CMakeLists.txt  beacon_swig.i
util/: cnr.m  periodogram.m  periodogram_win.m  plot.py  window_parameters.m  windowing_analysis.m
